--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>8.0.1.Final</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>spring-MVC-app</finalName>
