--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>6.1.3</version>
+      <version>6.1.5</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
-      <version>6.1.3</version>
+      <version>6.1.5</version>
     </dependency>
 
     <dependency>
@@ -56,6 +56,12 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
       <version>6.1.4</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>3.2.4</version>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
